--- a/style.css
+++ b/style.css
@@ -23,5 +23,22 @@ li{
     background-color: #fff;
     font-family: Arial, Helvetica, sans-serif;
     font-size: medium;
+    display: block;
     /* font-weight: bolder; */
+}
+ul{
+    border: #000 inset 2px;
+    border-radius: 5px;
+    width: 100px;
+    height: 100px;
+    overflow: auto;
+    padding: 2px;
+    margin: 0;
+}
+ol{
+    
+}
+img{
+    height: 300px;
+    width: 200px;
 }
