--- a/style.css
+++ b/style.css
@@ -18,14 +18,14 @@ li{
     color: red;
     text-align: center;
 } */
-*{
+/* *{
     color: #000;
     background-color: #fff;
     font-family: Arial, Helvetica, sans-serif;
     font-size: medium;
     display: block;
     /* font-weight: bolder; */
-}
+} */
 ul{
     border: #000 inset 2px;
     border-radius: 5px;
@@ -41,4 +41,21 @@ ol{
 img{
     height: 300px;
     width: 200px;
+}
+#yellow{
+    font-size: 34px;
+    color: blue;
+    background-color: aquamarine;
+    height: 300px;
+    width: 200px;
+}
+body{
+    color: blue;
+}
+p{
+    text-align: center;
+    color: blueviolet;
+}
+a:visited{
+    color: yellow;
 }
