--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: monospace, sans-serif;
 }
 .sectionone{
     height: 100vh;
@@ -320,7 +321,7 @@
     cursor: pointer;
 }
 .footer {
-    height: 20%;
+    height: 10%;
     width: 100%;
     display: flex;
     align-items: center;
