Changed the biographies color to aqua

--- a/style.css
+++ b/style.css
@@ -183,6 +183,9 @@
 .bandmember p{
     margin-bottom: 10px;
 }
+.sectiontwo strong{
+    color: aqua;
+}
 /* END OF SECTION TWO */
 
 /* START OF SECTION THREE */
