Started designing the partnership section

--- a/style.css
+++ b/style.css
@@ -337,4 +337,11 @@
     background-color: #000;
 }
 /* END OF SECTION THREE */
+
+/* Start of section four */
+.sectionfour{
+    height: 40vh;
+    width: 100%;
+    background-color: #121212;
+}
 /* LET'S ENJOY THE WEEKEND */
