--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,7 +6,7 @@
 .sectionone{
     height: 100vh;
     width: 100vw;
-    background-image:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.7)), url(./background_img.jpg);
+    background-image:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.7)), url(../Images/background_img.jpg);
     background-position: top;
     background-size: cover;
     display: flex;
